--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <h1 class="visually-hidden">Магазин строительных материалов и инструментов ТЕХНОМАРТ</h1>
     <section class="header-top">
       <a class="logo">
-        <img src="https://via.placeholder.com/108x18" alt="ТЕХНОМАРТ" width="108" height="18">
+        <img src="img/logo.svg" alt="Логотип ТЕХНОМАРТ" width="108" height="18">
       </a>
       <input type="search" class="search-field" name="search" id="search-field" placeholder="Поиск:">
       <a href="blank.html" class="header-top-link header-bookmarks">Закладки:0</a>
@@ -64,13 +64,13 @@
           <label for="catalog-slider-btn-1"></label>
           <label for="catalog-slider-btn-2"></label>
         </div>
-        <button type="button" disabled>Назад</button>
-        <button type="button">Вперед</button>
+        <button type="button" class="btn-slider-previous" disabled></button>
+        <button type="button" class="btn-slider-next"></button>
         <div class="catalog-slider-inner">
           <div class="catalog-slider-slide">
             <h3 class="catalog-slide-title">Перфораторы</h3>
             <p class="catalog-slide-text">Настоящие мужские игрушки</p>
-            <img class="catalog-slide-image" src="https://via.placeholder.com/620x266" width="620" height="266"
+            <img class="catalog-slide-image" src="img/slider-perforator.jpg" width="620" height="266"
               alt="Рабочий с перфоратором">
             <a href="catalog.html" class="btn btn-catalog">Открыть каталог</a>
           </div>
@@ -78,7 +78,7 @@
           <div class="catalog-slider-slide">
             <h3 class="catalog-slide-title">Дрели</h3>
             <p class="catalog-slide-text">Соседям на радость!</p>
-            <img class="catalog-slide-image" src="https://via.placeholder.com/620x266" width="620" height="266"
+            <img class="catalog-slide-image" src="img/slider-drill.jpg" width="620" height="266"
               alt="Рабочий с дрелью">
             <a href="blank.html" class="btn btn-catalog">Открыть каталог</a>
           </div>
@@ -118,8 +118,7 @@
             <a href="blank.html" class="btn-green">Купить</a>
             <a href="blank.html" class="btn-green-border">В закладки</a>
           </div>
-          <img src="https://via.placeholder.com/184x164" class="product-image" width="184" height="164"
-            alt="Перфоратор BOSCH BFG 9000">
+          <img src="img/snippet-32961.jpg" class="product-image" width="184" height="164" alt="Перфоратор BOSCH BFG 9000">
           <a href="blank.html" class="product-link">Перфоратор BOSCH BFG 9000</a>
           <p><del class="product-old-price">32500 Р.</del></p>
           <p class="product-price">25500 Р.</p>
@@ -129,8 +128,7 @@
             <a href="blank.html" class="btn-green">Купить</a>
             <a href="blank.html" class="btn-green-border">В закладки</a>
           </div>
-          <img src="https://via.placeholder.com/127x112" class="product-image" width="127" height="112"
-            alt="Перфоратор BOSCH BFG 3000">
+          <img src="img/snippet-18927.jpg" class="product-image" width="127" height="112" alt="Перфоратор BOSCH BFG 3000">
           <a href="blank.html" class="product-link">Перфоратор BOSCH BFG 3000</a>
           <p><del class="product-old-price">22500 Р.</del></p>
           <p class="product-price">15500 Р.</p>
@@ -140,8 +138,7 @@
             <a href="blank.html" class="btn-green">Купить</a>
             <a href="blank.html" class="btn-green-border">В закладки</a>
           </div>
-          <img src="https://via.placeholder.com/144x128" class="product-image" width="144" height="128"
-            alt="Перфоратор BOSCH BFG 6000">
+          <img src="img/snippet-945.jpg" class="product-image" width="144" height="128" alt="Перфоратор BOSCH BFG 6000">
           <a href="blank.html" class="product-link">Перфоратор BOSCH BFG 6000</a>
           <p><del class="product-old-price">30500 Р.</del></p>
           <p class="product-price">25500 Р.</p>
@@ -151,8 +148,7 @@
             <a href="blank.html" class="btn-green">Купить</a>
             <a href="blank.html" class="btn-green-border">В закладки</a>
           </div>
-          <img src="https://via.placeholder.com/127x112" class="product-image" width="127" height="112"
-            alt="Перфоратор BOSCH BFG 2000">
+          <img src="img/snippet-18927.jpg" class="product-image" width="127" height="112" alt="Перфоратор BOSCH BFG 2000">
           <a href="blank.html" class="product-link">Перфоратор BOSCH HBFG 2000</a>
           <p class="product-price">12500 Р.</p>
         </li>
@@ -166,42 +162,42 @@
       <ul class="brands-list">
         <li class="brand-item">
           <a href="blank.html" class="brand-link">
-            <img src="https://via.placeholder.com/126x37" class="brand-image" width="126" height="37" alt="BOSCH">
+            <img src="img/bosch.png" class="brand-image" width="126" height="37" alt="BOSCH">
           </a>
         </li>
         <li class="brand-item">
           <a href="blank.html" class="brand-link">
-            <img src="https://via.placeholder.com/123x40" class="brand-image" width="123" height="40" alt="Makita">
+            <img src="img/Makita.png" class="brand-image" width="123" height="40" alt="Makita">
           </a>
         </li>
         <li class="brand-item">
           <a href="blank.html" class="brand-link">
-            <img src="https://via.placeholder.com/146x44" class="brand-image" width="146" height="44" alt="DeWALT">
+            <img src="img/DeWALT.png" class="brand-image" width="146" height="44" alt="DeWALT">
           </a>
         </li>
         <li class="brand-item">
           <a href="blank.html" class="brand-link">
-            <img src="https://via.placeholder.com/200x76" class="brand-image" width="200" height="76" alt="Интерскол">
+            <img src="img/interskol.png" class="brand-image" width="200" height="76" alt="Интерскол">
           </a>
         </li>
         <li class="brand-item">
           <a href="blank.html" class="brand-link">
-            <img src="https://via.placeholder.com/169x31" class="brand-image" width="169" height="31" alt="Hitachi">
+            <img src="img/Hitachi.png" class="brand-image" width="169" height="31" alt="Hitachi">
           </a>
         </li>
         <li class="brand-item">
           <a href="blank.html" class="brand-link">
-            <img src="https://via.placeholder.com/121x73" class="brand-image" width="121" height="73" alt="LG">
+            <img src="img/LG.png" class="brand-image" width="121" height="73" alt="LG">
           </a>
         </li>
         <li class="brand-item">
           <a href="blank.html" class="brand-link">
-            <img src="https://via.placeholder.com/151x98" class="brand-image" width="151" height="98" alt="AEG">
+            <img src="img/AEG.png" class="brand-image" width="151" height="98" alt="AEG">
           </a>
         </li>
         <li class="brand-item">
           <a href="blank.html" class="brand-link">
-            <img src="https://via.placeholder.com/206x63" class="brand-image" width="206" height="63" alt="metabo">
+            <img src="img/Metabo.png" class="brand-image" width="206" height="63" alt="metabo">
           </a>
         </li>
       </ul>
@@ -279,7 +275,7 @@
   <footer class="page-footer main-footer">
     <div class="footer-top">
       <a class="logo">
-        <img src="https://via.placeholder.com/108x18" alt="ТЕХНОМАРТ" width="108" height="18">
+        <img src="img/logo.svg" alt="ТЕХНОМАРТ" width="108" height="18">
       </a>
       <address class="footer-address">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</address>
       <a href="tel:+78125550555" class="footer-phone">+7 (812) 555-05-55</a>
