--- a/catalog.html
+++ b/catalog.html
@@ -15,7 +15,7 @@
     <h1 class="visually-hidden">Магазин строительных материалов и инструментов ТЕХНОМАРТ</h1>
     <section class="header-top">
       <a href="index.html" class="logo">
-        <img src="https://via.placeholder.com/108x18" alt="ТЕХНОМАРТ" width="108" height="18">
+        <img src="img/logo.svg" alt="Логотип ТЕХНОМАРТ" width="108" height="18">
       </a>
       <input type="search" class="search-field" name="search" id="search-field">
       <a href="blank.html" class="header-top-link header-bookmarks">Закладки</a>
@@ -88,11 +88,10 @@
               <a href="blank.html" class="products-sort-link">По функционалу</a>
             </li>
             <li class="products-sort-item">
-              <a href="blank.html" class="products-sort-link sort-arrow-up products-sort-link-active">По
-                возрастанию</a>
+              <a href="blank.html" class="sort-arrow-up sort-arrow-active"></a>
             </li>
             <li class="products-sort-item">
-              <a href="blank.html" class="products-sort-link sort-arrow-down">По убыванию</a>
+              <a href="blank.html" class="sort-arrow-down"></a>
             </li>
           </ul>
         </div>
@@ -102,7 +101,7 @@
               <a href="blank.html" class="btn-green">Купить</a>
               <a href="blank.html" class="btn-green-border">В закладки</a>
             </div>
-            <img src="https://via.placeholder.com/144x128" alt="Перфоратор BOSCH BFG 6000" class="product-image">
+            <img src="img/snippet-945.jpg" alt="Перфоратор BOSCH BFG 6000" class="product-image">
             <a href="blank.html" class="product-link">Перфоратор BOSCH BFG 6000</a>
             <p><del class="product-old-price">30500 Р.</del></p>
             <p class="product-price">25500 Р.</p>
@@ -112,7 +111,7 @@
               <a href="blank.html" class="btn-green">Купить</a>
               <a href="blank.html" class="btn-green-border">В закладки</a>
             </div>
-            <img src="https://via.placeholder.com/144x128" alt="Перфоратор BOSCH BFG 6000" class="product-image">
+            <img src="img/snippet-945.jpg" alt="Перфоратор BOSCH BFG 6000" class="product-image">
             <a href="blank.html" class="product-link">Перфоратор BOSCH BFG 6000</a>
             <p><del class="product-old-price">30500 Р.</del></p>
             <p class="product-price">25500 Р.</p>
@@ -122,7 +121,7 @@
               <a href="blank.html" class="btn-green">Купить</a>
               <a href="blank.html" class="btn-green-border">В закладки</a>
             </div>
-            <img src="https://via.placeholder.com/144x128" alt="Перфоратор BOSCH BFG 6000" class="product-image">
+            <img src="img/snippet-945.jpg" alt="Перфоратор BOSCH BFG 6000" class="product-image">
             <a href="blank.html" class="product-link">Перфоратор BOSCH BFG 6000</a>
             <p><del class="product-old-price">30500 Р.</del></p>
             <p class="product-price">25500 Р.</p>
@@ -132,7 +131,7 @@
               <a href="blank.html" class="btn-green">Купить</a>
               <a href="blank.html" class="btn-green-border">В закладки</a>
             </div>
-            <img src="https://via.placeholder.com/127x112" alt="Перфоратор BOSCH BFG 3000" class="product-image">
+            <img src="img/snippet-18927.jpg" alt="Перфоратор BOSCH BFG 3000" class="product-image">
             <a href="blank.html" class="product-link">Перфоратор BOSCH BFG 3000</a>
             <p><del class="product-old-price">22500 Р.</del></p>
             <p class="product-price">15500 Р.</p>
@@ -142,7 +141,7 @@
               <a href="blank.html" class="btn-green">Купить</a>
               <a href="blank.html" class="btn-green-border">В закладки</a>
             </div>
-            <img src="https://via.placeholder.com/144x128" alt="Перфоратор BOSCH BFG 6000" class="product-image">
+            <img src="img/snippet-945.jpg" alt="Перфоратор BOSCH BFG 6000" class="product-image">
             <a href="blank.html" class="product-link">Перфоратор BOSCH BFG 6000</a>
             <p><del class="product-old-price">30500 Р.</del></p>
             <p class="product-price">25500 Р.</p>
@@ -152,7 +151,7 @@
               <a href="blank.html" class="btn-green">Купить</a>
               <a href="blank.html" class="btn-green-border">В закладки</a>
             </div>
-            <img src="https://via.placeholder.com/127x112" alt="Перфоратор BOSCH BFG 2000" class="product-image">
+            <img src="img/snippet-18927.jpg" alt="Перфоратор BOSCH BFG 2000" class="product-image">
             <a href="blank.html" class="product-link">Перфоратор BOSC HBFG 2000</a>
             <p class="product-price">12500 Р.</p>
           </li>
@@ -161,7 +160,7 @@
               <a href="blank.html" class="btn-green">Купить</a>
               <a href="blank.html" class="btn-green-border">В закладки</a>
             </div>
-            <img src="https://via.placeholder.com/127x112" alt="Перфоратор BOSCH BFG 3000" class="product-image">
+            <img src="img/snippet-18927.jpg" alt="Перфоратор BOSCH BFG 3000" class="product-image">
             <a href="blank.html" class="product-link">Перфоратор BOSCH BFG 3000</a>
             <p><del class="product-old-price">22500 Р.</del></p>
             <p class="product-price">15500 Р.</p>
@@ -171,7 +170,7 @@
               <a href="blank.html" class="btn-green">Купить</a>
               <a href="blank.html" class="btn-green-border">В закладки</a>
             </div>
-            <img src="https://via.placeholder.com/144x128" alt="Перфоратор BOSCH BFG 6000" class="product-image">
+            <img src="img/snippet-945.jpg" alt="Перфоратор BOSCH BFG 6000" class="product-image">
             <a href="blank.html" class="product-link">Перфоратор BOSCH BFG 6000</a>
             <p><del class="product-old-price">30500 Р.</del></p>
             <p class="product-price">25500 Р.</p>
@@ -181,7 +180,7 @@
               <a href="blank.html" class="btn-green">Купить</a>
               <a href="blank.html" class="btn-green-border">В закладки</a>
             </div>
-            <img src="https://via.placeholder.com/127x112" alt="Перфоратор BOSCH BFG 2000" class="product-image">
+            <img src="img/snippet-18927.jpg" alt="Перфоратор BOSCH BFG 2000" class="product-image">
             <a href="blank.html" class="product-link">Перфоратор BOSCH HBFG 2000</a>
             <p class="product-price">12500 Р.</p>
           </li>
@@ -204,7 +203,8 @@
     </section>
     <section class="about-products">
       <h2 class="section-title">Пара слов о перфораторах</h2>
-      <p class="section-text">Перфоратор — универсальный строительный инструмент. Предназначен для сверления и долбления отверстий в кирпиче,
+      <p class="section-text">Перфоратор — универсальный строительный инструмент. Предназначен для сверления и долбления
+        отверстий в кирпиче,
         бетоне и камне.
         Существуют электромеханические и пневматические перфораторы. Современные модели могут выполнять функции дрели,
         шуруповерта и отбойного молотка.
@@ -214,8 +214,8 @@
   </main>
   <footer class="page-footer main-footer">
     <div class="footer-top">
-      <a class="logo">
-        <img src="https://via.placeholder.com/108x18" alt="ТЕХНОМАРТ" width="108" height="18">
+      <a href="index.html" class="logo">
+        <img src="img/logo.svg" alt="ТЕХНОМАРТ" width="108" height="18">
       </a>
       <address class="footer-address">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</address>
       <a href="tel:+78125550555" class="footer-phone">+7 (812) 555-05-55</a>
